# market-data-tickerplant-simulator

./: README.md  pyproject.toml
docs/: operating-boundaries.md  recruiter-brief.md  research-note.md  system-design.md  validation-evidence.md
src/market_data_tickerplant_simulator/: __init__.py  tickerplant.py
tests/: test_tickerplant.py
