[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-tickerplant-simulator"
version = "0.1.0"
description = "Tickerplant top-of-book projection from normalized quote updates."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ephraim Shaw" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
